[package]
name = "Stargazers"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["StargazersPlanet", "galaxy_visualizer_stargazers"]

[workspace.dependencies]
common-game = "3.0.0"

[dependencies]
common-game = { workspace = true }
the-compiler-strikes-back = { git = "https://github.com/TheCompilerStrikesBackAP2025/TheCompilerStrikesBack.git" }
huston = { package = "Planet", git = "https://github.com/Houston-we-have-a-borrow/Planet" }
one-million-crabs = { git = "https://github.com/Advance-Programming-2025/One_million_crabs.git" }
ara_kees = {git = "https://github.com/black-adidas-shoe-org/planet.git" }
trip = { git = "https://github.com/Totally-Reliable-Imaginary-Planets/TRIP.git", branch = "main" }
immutable_cosmic_borrow = { git = "https://github.com/ImmutableCosmicBorrow/planet.git" }
rusty-crab-ap2025 = "2.0.0-beta.2"
log = "0.4.29"
crossbeam-channel = "0.5.15"

# The 3D visualizer is vendored in this repo but kept optional, so a normal
# `cargo build` doesn't drag in Bevy. Enable it with `--features visualizer`.
galaxy_visualizer_stargazers = { path = "galaxy_visualizer_stargazers", optional = true }
env_logger = "0.11.8"
rand = "0.8.6"

[features]
default = ["galaxy_visualizer"]
galaxy_visualizer = ["dep:galaxy_visualizer_stargazers"]

# Profiles must live in the workspace root. Build dependencies (Bevy included)
# optimized even in dev so the visualizer runs smoothly.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
